# Leadenrich-Scraper-backend

./: .env.example  .gitignore  README.md  diagnose.py  keys.json  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/routes/: auth.py  upload.py
app/services/: email_service.py  firecrawl.py  job_manager.py
app/utils/: csv_export.py  regex_extractors.py  url_normalizer.py
scratch/: test_scraping_system.py
